--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -70,6 +70,7 @@ label {
 }
 
 .collapsibleLabel {
+    line-height: 10px;
     padding: 1rem;
     display: block;
     overflow: hidden;
@@ -79,7 +80,7 @@ label {
     box-shadow: 0px 0px 35px $header_shadow inset;
     font-weight: bold;
     font-family: monospace;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
     color: #ddd;
     text-overflow: ellipsis;
